# ncaa_bball_ratings

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dash  README.md  dash_req.txt  docker-compose.yml  optuna_tuning.ipynb  pymc_features.ipynb  pyproject.toml  requirements.txt
extra_md/: definitions.md
power_ratings/: basic_elo.py  constants.py  featurizers.py  pm_training.py  simple_model.py  tournament_dataset.py  tuning.py  utils.py
power_ratings/dash/: app.py
