[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "power_ratings"
version = "2.0.0"
dependencies = [
  "pymc==5.20.1",
  "aesara==2.9.4",
  "plotly==5.19.0",
  "pandas==1.4.1",
  "scikit-learn==1.3.0",
  "mlflow==2.10.2",
  "jupyter-black==0.3.3",
  "black>=23.11.0",
  "optuna==3.5.0",
  "jupyter==1.0.0"
]
requires-python = ">=3.10"
authors = [
  {name = "j", email = "no.thanks@thevoid.biz"},
]
description = "package for creating probabilistic sports ratings"
